2025-06-21T00:55:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15790369440 # 681
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-21
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 555 948 / 559 952
* notice: next accum: outdated-unq outdated-all / unq all: 556 949 / 560 953
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-06] / [2025-06-20]

2025-06-20T00:56:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15768845471 # 680
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-20
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 555 948 / 558 951
* notice: next accum: outdated-unq outdated-all / unq all: 555 948 / 559 952
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-19]

2025-06-19T00:57:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15746845249 # 679
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-19
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 555 948 / 557 950
* notice: next accum: outdated-unq outdated-all / unq all: 555 948 / 558 951
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-18]

2025-06-16T00:58:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15669388124 # 676