@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-21T00:55:57Z",
+  "timestamp" : "2025-06-22T01:02:22Z",
   "count_outdated" : 949,
   "uniques_outdated" : 556,
-  "count" : 953,
-  "uniques" : 560,
+  "count" : 954,
+  "uniques" : 561,
   "clones" : [
     {
       "timestamp": "2025-06-15T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2025-06-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
