@@ -1,3 +1,12 @@
+2025-06-22T01:02:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15801370929 # 682
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-22
+* notice: last 14d: unq all: 2 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 556 949 / 560 953
+* notice: next accum: outdated-unq outdated-all / unq all: 556 949 / 561 954
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-06-21]
+
 2025-06-21T00:55:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15790369440 # 681
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-21
